S9/96 - Adding the sort functionality PLUS adding the mobile functionality for sorting and filtering ( issue with id: 0 returning no results on mobile solved )

--- a/client/src/app/shop/shop.component.scss
+++ b/client/src/app/shop/shop.component.scss
@@ -4,7 +4,14 @@
   align-items: center;
 }
 
+.list-group-item:hover {
+  cursor: pointer;
+  transform: scale(1.01);
+}
 
+.form-select {
+  cursor: pointer;
+}
 
 
 
